--- a/Pandas Library/DataFrame/PandasNavigator.ipynb
+++ b/Pandas Library/DataFrame/PandasNavigator.ipynb
@@ -355,7 +355,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "1aff7ca5",
+   "id": "80bae1da",
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +376,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "6ab55362",
+   "id": "3e1dac0c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "f8a70a5a",
+   "id": "2958c11a",
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +407,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "4c9bf725",
+   "id": "8c9a5996",
    "metadata": {},
    "outputs": [
     {
@@ -428,7 +428,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "1c437120",
+   "id": "81261ae3",
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +498,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "a492a7ca",
+   "id": "4d6b41ae",
    "metadata": {},
    "outputs": [
     {
@@ -640,7 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "186b8860",
+   "id": "49454411",
    "metadata": {},
    "outputs": [
     {
@@ -719,7 +719,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "17a6f25d",
+   "id": "b6932123",
    "metadata": {},
    "outputs": [
     {
@@ -755,7 +755,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "c5c269ca",
+   "id": "408f9b2f",
    "metadata": {},
    "outputs": [
     {
@@ -776,7 +776,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "ee93a37f",
+   "id": "85b27246",
    "metadata": {},
    "outputs": [
     {
@@ -915,7 +915,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "8f5da0f3",
+   "id": "34e89d11",
    "metadata": {},
    "outputs": [
     {
@@ -936,7 +936,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "928982eb",
+   "id": "e2abcf5e",
    "metadata": {},
    "outputs": [
     {
@@ -1051,7 +1051,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "a2816c93",
+   "id": "95f02841",
    "metadata": {},
    "outputs": [
     {
@@ -1112,7 +1112,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "b8e1517c",
+   "id": "8572f191",
    "metadata": {},
    "outputs": [
     {
@@ -1196,8 +1196,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "id": "d00a379a",
+   "execution_count": 46,
+   "id": "b23444d4",
    "metadata": {},
    "outputs": [
     {
@@ -1221,6 +1221,8 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>level_0</th>\n",
+       "      <th>index</th>\n",
        "      <th>SepalWidth</th>\n",
        "      <th>PetalLength</th>\n",
        "      <th>Name</th>\n",
@@ -1230,95 +1232,127 @@
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>5.1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>3.5</td>\n",
        "      <td>1.4</td>\n",
        "      <td>Iris-setosa</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4.9</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "      <td>3.0</td>\n",
        "      <td>1.4</td>\n",
        "      <td>Iris-setosa</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4.7</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
        "      <td>3.2</td>\n",
        "      <td>1.3</td>\n",
        "      <td>Iris-setosa</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4.6</th>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
        "      <td>3.1</td>\n",
        "      <td>1.5</td>\n",
        "      <td>Iris-setosa</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5.0</th>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
        "      <td>3.6</td>\n",
        "      <td>1.4</td>\n",
        "      <td>Iris-setosa</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5.4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
        "      <td>3.9</td>\n",
        "      <td>1.7</td>\n",
        "      <td>Iris-setosa</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5.2</th>\n",
+       "      <td>6</td>\n",
+       "      <td>6</td>\n",
        "      <td>3.4</td>\n",
        "      <td>1.4</td>\n",
        "      <td>Iris-setosa</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5.3</th>\n",
+       "      <td>7</td>\n",
+       "      <td>7</td>\n",
        "      <td>3.4</td>\n",
        "      <td>1.5</td>\n",
        "      <td>Iris-setosa</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4.4</th>\n",
+       "      <td>8</td>\n",
+       "      <td>8</td>\n",
        "      <td>2.9</td>\n",
        "      <td>1.4</td>\n",
        "      <td>Iris-setosa</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5.4</th>\n",
+       "      <td>9</td>\n",
+       "      <td>9</td>\n",
        "      <td>3.1</td>\n",
        "      <td>1.5</td>\n",
        "      <td>Iris-setosa</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5.5</th>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
        "      <td>3.7</td>\n",
        "      <td>1.5</td>\n",
        "      <td>Iris-setosa</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5.6</th>\n",
+       "      <td>11</td>\n",
+       "      <td>11</td>\n",
        "      <td>3.4</td>\n",
        "      <td>1.6</td>\n",
        "      <td>Iris-setosa</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4.8</th>\n",
+       "      <td>12</td>\n",
+       "      <td>12</td>\n",
        "      <td>3.0</td>\n",
        "      <td>1.4</td>\n",
        "      <td>Iris-setosa</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4.3</th>\n",
+       "      <td>13</td>\n",
+       "      <td>13</td>\n",
        "      <td>3.0</td>\n",
        "      <td>1.1</td>\n",
        "      <td>Iris-setosa</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5.8</th>\n",
+       "      <td>14</td>\n",
+       "      <td>14</td>\n",
        "      <td>4.0</td>\n",
        "      <td>1.2</td>\n",
        "      <td>Iris-setosa</td>\n",
@@ -1328,26 +1362,26 @@
        "</div>"
       ],
       "text/plain": [
-       "             SepalWidth  PetalLength         Name\n",
-       "SepalLength                                      \n",
-       "5.1                 3.5          1.4  Iris-setosa\n",
-       "4.9                 3.0          1.4  Iris-setosa\n",
-       "4.7                 3.2          1.3  Iris-setosa\n",
-       "4.6                 3.1          1.5  Iris-setosa\n",
-       "5.0                 3.6          1.4  Iris-setosa\n",
-       "5.4                 3.9          1.7  Iris-setosa\n",
-       "5.2                 3.4          1.4  Iris-setosa\n",
-       "5.3                 3.4          1.5  Iris-setosa\n",
-       "4.4                 2.9          1.4  Iris-setosa\n",
-       "5.4                 3.1          1.5  Iris-setosa\n",
-       "5.5                 3.7          1.5  Iris-setosa\n",
-       "5.6                 3.4          1.6  Iris-setosa\n",
-       "4.8                 3.0          1.4  Iris-setosa\n",
-       "4.3                 3.0          1.1  Iris-setosa\n",
-       "5.8                 4.0          1.2  Iris-setosa"
+       "             level_0  index  SepalWidth  PetalLength         Name\n",
+       "SepalLength                                                      \n",
+       "5.1                0      0         3.5          1.4  Iris-setosa\n",
+       "4.9                1      1         3.0          1.4  Iris-setosa\n",
+       "4.7                2      2         3.2          1.3  Iris-setosa\n",
+       "4.6                3      3         3.1          1.5  Iris-setosa\n",
+       "5.0                4      4         3.6          1.4  Iris-setosa\n",
+       "5.4                5      5         3.9          1.7  Iris-setosa\n",
+       "5.2                6      6         3.4          1.4  Iris-setosa\n",
+       "5.3                7      7         3.4          1.5  Iris-setosa\n",
+       "4.4                8      8         2.9          1.4  Iris-setosa\n",
+       "5.4                9      9         3.1          1.5  Iris-setosa\n",
+       "5.5               10     10         3.7          1.5  Iris-setosa\n",
+       "5.6               11     11         3.4          1.6  Iris-setosa\n",
+       "4.8               12     12         3.0          1.4  Iris-setosa\n",
+       "4.3               13     13         3.0          1.1  Iris-setosa\n",
+       "5.8               14     14         4.0          1.2  Iris-setosa"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1359,18 +1393,214 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5cb0b210",
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 47,
+   "id": "3b64adad",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>SepalLength</th>\n",
+       "      <th>level_0</th>\n",
+       "      <th>index</th>\n",
+       "      <th>SepalWidth</th>\n",
+       "      <th>PetalLength</th>\n",
+       "      <th>Name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>5.1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>Iris-setosa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4.9</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>Iris-setosa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4.7</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3.2</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>Iris-setosa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4.6</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3.1</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>Iris-setosa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3.6</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>Iris-setosa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>5.4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3.9</td>\n",
+       "      <td>1.7</td>\n",
+       "      <td>Iris-setosa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>5.2</td>\n",
+       "      <td>6</td>\n",
+       "      <td>6</td>\n",
+       "      <td>3.4</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>Iris-setosa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>5.3</td>\n",
+       "      <td>7</td>\n",
+       "      <td>7</td>\n",
+       "      <td>3.4</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>Iris-setosa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>4.4</td>\n",
+       "      <td>8</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2.9</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>Iris-setosa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>5.4</td>\n",
+       "      <td>9</td>\n",
+       "      <td>9</td>\n",
+       "      <td>3.1</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>Iris-setosa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>5.5</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>3.7</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>Iris-setosa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>5.6</td>\n",
+       "      <td>11</td>\n",
+       "      <td>11</td>\n",
+       "      <td>3.4</td>\n",
+       "      <td>1.6</td>\n",
+       "      <td>Iris-setosa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>4.8</td>\n",
+       "      <td>12</td>\n",
+       "      <td>12</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>Iris-setosa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>4.3</td>\n",
+       "      <td>13</td>\n",
+       "      <td>13</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>Iris-setosa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>5.8</td>\n",
+       "      <td>14</td>\n",
+       "      <td>14</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1.2</td>\n",
+       "      <td>Iris-setosa</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    SepalLength  level_0  index  SepalWidth  PetalLength         Name\n",
+       "0           5.1        0      0         3.5          1.4  Iris-setosa\n",
+       "1           4.9        1      1         3.0          1.4  Iris-setosa\n",
+       "2           4.7        2      2         3.2          1.3  Iris-setosa\n",
+       "3           4.6        3      3         3.1          1.5  Iris-setosa\n",
+       "4           5.0        4      4         3.6          1.4  Iris-setosa\n",
+       "5           5.4        5      5         3.9          1.7  Iris-setosa\n",
+       "6           5.2        6      6         3.4          1.4  Iris-setosa\n",
+       "7           5.3        7      7         3.4          1.5  Iris-setosa\n",
+       "8           4.4        8      8         2.9          1.4  Iris-setosa\n",
+       "9           5.4        9      9         3.1          1.5  Iris-setosa\n",
+       "10          5.5       10     10         3.7          1.5  Iris-setosa\n",
+       "11          5.6       11     11         3.4          1.6  Iris-setosa\n",
+       "12          4.8       12     12         3.0          1.4  Iris-setosa\n",
+       "13          4.3       13     13         3.0          1.1  Iris-setosa\n",
+       "14          5.8       14     14         4.0          1.2  Iris-setosa"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df.loc['5.8']"
+    "df.reset_index(inplace=True)\n",
+    "df"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97a32530",
+   "id": "df58e7e1",
    "metadata": {},
    "outputs": [],
    "source": []
